tdf#113866 print text in black print option doest not affect PDF export

Change-Id: I55d21d6c52c37f21ef80a34433e6033339a7acf5